# bigfootbot

./: .gitignore  Dockerfile  Dockerfile.bigfootbot  Dockerfile.create_pkg  README.md  commands.md  commands.txt  commands_Docker.txt  commands_Git.txt  commands_Linux_desktop_env.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
basic_mobile_robot/: BasicMobileRobot.Dockerfile  CMakeLists.txt  docker-compose.yml  package.xml
bfb_arduino_gateway/: package.xml  setup.py
bfb_gps/: package.xml  setup.py
bfb_interfaces/: CMakeLists.txt
bfb_realsense_camera/: package.xml  setup.py
bfb_realsense_camera_OLD/: package.xml  setup.cfg
bfb_road_follower/: package.xml  setup.cfg  setup.py
bfb_rpi_camera_OLD/: package.xml  setup.cfg  setup.py
bigfoot_bringup/: Dockerfile  docker-compose.yml  ros_entrypoint.sh  setup.py
bigfoot_bringup_py/: package.xml  setup.cfg  setup.py
bigfoot_description/: BigfootDescription.Dockerfile  CMakeLists.txt  docker-compose.yml  package.xml
bigfootbot/: CMakeLists.txt  package.xml
bigfootbot_base/: CMakeLists.txt  package.xml
bigfootbot_bringup/: CMakeLists.txt  package.xml
bigfootbot_bringup/commands/: ros2 commands.txt
bigfootbot_bringup/launch/: bfb_description.launch.py  bfb_teleop.launch.py  bigfootbot_v5.launch.py  ros2_roboclaw_driver.launch.py
bigfootbot_description/: BigfootDescription.Dockerfile  CMakeLists.txt  Nav2.Dockerfile  README.md  docker-compose.yml  package.xml  ros_entrypoint.sh
bigfootbot_gazebo/: CMakeLists.txt  README.md  package.xml
bigfootbot_navigation/: CMakeLists.txt  package.xml
bigfootbot_teleop/: CMakeLists.txt  README.md  package.xml
config/: roboclaw_config.yaml
docker/: Dockerfile.aarch64.humble.nav2  Dockerfile.bfb_base  (+23 more)
docker/web/webrtc_video/: CMakeLists.txt  DOCKER_SETUP.md  Dockerfile.rpi  Dockerfile.rpi.arm  Dockerfile.signaling  Dockerfile.webrtc  Dockerfile.webrtc_ros2  Dockerfile.x86  README.md  README_RPI.md  access_over_internet.sh  build.sh  build_rpi.sh  docker-build-x86.sh  docker-build.sh  docker-compose.rpi.yml  docker-compose.x86.yml  docker-compose.yml  docker-compose_webrtc.yml  entrypoint.sh  serve_client.sh  test_signaling.sh
docker/web/webrtc_video/aiortc_NEW/: .gitignore  Dockerfile  README.md  docker-compose.yml  package.json
docker/web/webrtc_video/aiortc_NEW/src/: config.js  server.js
docker/web/webrtc_video/aiortc_NEW/src/services/: SignalingService.js
docker/web/webrtc_video/aiortc_NEW/src/utils/: logger.js
docker/web/webrtc_video/aiortc_impl/: Dockerfile  README.md  docker-compose.yml  http_server.Dockerfile  requirements.txt  signaling.Dockerfile  start.sh  webrtc_sender.Dockerfile
docker/web/webrtc_video/aiortc_impl/src/: http_server.py  main.py  signaling_server.py  video_server.py  webrtc_sender.py  webrtc_server.py
docker/web/webrtc_video/aiortc_impl/static/: index.html  style.css
docker/web/webrtc_video/client/: index.html
docker/web/webrtc_video/docs/api/: api.md
docker/web/webrtc_video/docs/architecture/: architecture.md
docker/web/webrtc_video/docs/components/: signaling_server.md  video_receiver.md  video_sender.md
docker/web/webrtc_video/docs/development/: development.md
docker/web/webrtc_video/docs/examples/: examples.md
docker/web/webrtc_video/docs/performance/: performance.md
docker/web/webrtc_video/docs/security/: security.md
docker/web/webrtc_video/docs/setup/: setup_guide.md
docker/web/webrtc_video/docs/troubleshooting/: troubleshooting.md
docker/web/webrtc_video/src/: recv  recv.c  recv.cpp  recv.py  recv_jev.cpp  recv_x86.cpp  send  send.cpp  send.py  send_jev_OLD.cpp  send_rpi.cpp  send_x86.cpp  signaling  signaling.cpp  signaling.py  signaling_server.py  test.cpp  test.py  websocket_client
docker/web/webrtc_video/udev/: 99-cameras.rules
src/bfb_webrtc/: CMakeLists.txt  package.xml
src/bfb_webrtc/src/: send.cpp  signaling.cpp
src/bfb_webrtc/udev/: 99-cameras.rules
src/bigfootbot_teleop/: CMakeLists.txt  package.xml
src/bigfootbot_teleop/config/: teleop_twist_joy_ps3.yaml
src/bigfootbot_teleop/script/: apply_udev_rules.sh
src/bigfootbot_teleop/udev/: README.md
(+305 files in other folders)
