<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bigfootbot_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jevgeni.kalbin@gmail.com">jevgeni</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>bigfootbot_base</exec_depend>
  <exec_depend>bigfootbot_description</exec_depend>
  <exec_depend>bigfootbot_teleop</exec_depend>
  <!--exec_depend>bigfootbot_navigation</exec_depend-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
